# straaljager-old

./: .gitignore  Cargo.toml
src/: camera.rs  hittable.rs  main.rs  material.rs  ppm_file.rs  sphere.rs  vector_utils.rs
src/geometry/: aabb.rs  bvh_node.rs  hittable.rs  mod.rs  movable_sphere.rs  scene.rs  sphere.rs
src/io/: mod.rs  ppm_file.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/math/: camera.rs  light.rs  mod.rs  ray.rs  time_utils.rs  vector_utils.rs
src/textures/: constant_texture.rs  mod.rs
