[package]
name = "straaljager"
version = "0.1.0"
authors = ["MTesseracT <mtesseracttech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
straal = { git = "https://github.com/mtesseracttech/straal", branch = "develop" }
rand = "*"
num = "*"
rayon = "*"